# Smart-Flood-Detection-System

./: README.md
firmware/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/main/: CMakeLists.txt  alarm_task.c  alarm_task.h  alert_task.c  alert_task.h  app_config.h  event_log.c  event_log.h  main.c  sensor_logic.c  sensor_logic.h  sensor_task.c  sensor_task.h  wifi_manager.c  wifi_manager.h
