idf_component_register(
    SRCS
        "main.c"
        "sensor_task.c"
        "sensor_logic.c"
        "alarm_task.c"
        "alert_task.c"
        "event_log.c"
        "wifi_manager.c"
    INCLUDE_DIRS "."
    REQUIRES
        esp_wifi
        esp_event
        nvs_flash
        driver
        esp_timer
        esp_http_client
        esp-tls
        esp_system
)
